--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,9 +36,14 @@
           Roinnean-seòrsa
           </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="#">An t-Eadar-lìon</a>
+            <a class="dropdown-item" href="#">Applaidean</a>
+              <a class="dropdown-item" href="#">Apple</a>
+              <a class="dropdown-item" href="#">Blog</a>
+              <a class="dropdown-item" href="#">Gàidhlig</a>
+              <a class="dropdown-item" href="#">Google</a>
+              <a class="dropdown-item" href="#">LCDTQ</a>
+              <a class="dropdown-item" href="#">Microsoft</a>
             </div>
           </li>
           <li class="nav-item">
