--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,7 @@ layout: default
         <h3 class="post-title">{{ page.title }}</h3>
 
         {% if page.image %}
-          <img src="{{ post.image }}" class="post-image"><br>
+          <img src="{{ page.image }}" class="post-image"><br>
         {% endif %}
 
         {{ content }}
