--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
           {% endfor %}
         </span>
         {% if page.image %}
-          <img src="{{ site.baseurl }}{{ page.image }}" class="post-image"><br>
+          <img src="{{ post.image }}" class="post-image"><br>
         {% endif %}
 
         {{ content }}
