--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
             </a>
           {% endfor %}
         </span>
-          <img src="{{ post.image }}" class="post-image"><br>
+          <img src="{{ post.image }}" class="post-image">
 
         {{ content }}
       </div>
