--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,9 @@ layout: default
         </span>
           <img src="{{ post.image }}" class="post-image">
 
+          <p>page.image</p>
+          <img src="{{ page.image }}" class="post-image">
+
         {{ content }}
       </div>
 
