--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
       <meta property="og:title" content="{{ post.title }}" />
       <meta property="og:type" content="website" />
       <meta property="og:url" content="{{ post.url }}" />
-      <meta property="og:image" content="{{ post.image }}" />
+      <meta property="og:image" content="{{ page.image }}" />
     </head>
 
     <!--<div class="header-brand">
