--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <html>
     <head>
       <title>
-      {% if page.title == "Home" %}
+      {% if page.title == "Dachaigh" %}
       {{ site.title }} - {{ site.description }}
       {% else %}
       {{ page.title }} - {{ site.title }}
@@ -16,6 +16,7 @@
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
       <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+      <!--Meta data for Facebook Open Graph-->
       <meta property="og:title" content="{{ post.title }}" />
       <meta property="og:type" content="website" />
       <meta property="og:url" content="{{ post.url }}" />
