--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Tasglann</a>
+            <a class="nav-link" href="{{ site.baseurl }}/tasglann">Tasglann</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ site.baseurl }}/mu-dheidhinn">Mu Dheidhinn</a>
