--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,14 +45,14 @@
           Roinnean-seòrsa
           </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">An t-Eadar-lìon</a>
-            <a class="dropdown-item" href="#">Applaidean</a>
-              <a class="dropdown-item" href="#">Apple</a>
-              <a class="dropdown-item" href="#">Blog</a>
-              <a class="dropdown-item" href="#">Gàidhlig</a>
-              <a class="dropdown-item" href="#">Google</a>
-              <a class="dropdown-item" href="#">LCDTQ</a>
-              <a class="dropdown-item" href="#">Microsoft</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/eadar-lion">An t-Eadar-lìon</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/applaidean">Applaidean</a>
+              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/apple">Apple</a>
+              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/blog">Blog</a>
+              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/gaidhlig">Gàidhlig</a>
+              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/google">Google</a>
+              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/lcdtq">LCDTQ</a>
+              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/microsoft">Microsoft</a>
             </div>
           </li>
           <li class="nav-item">
