--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,6 +59,9 @@
             <a class="nav-link" href="{{ site.baseurl }}/tasglann">Tasglann</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{{ site.baseurl }}/lorg">Lorg</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{{ site.baseurl }}/mu-dheidhinn">Mu Dheidhinn</a>
           </li>
         </ul>
