--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,7 @@
       </title>
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
-
-      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <!--  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
       <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
       <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
       <link rel="manifest" href="/site.webmanifest">
@@ -43,11 +42,12 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
       <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <!--Meta data for Facebook Open Graph-->
+      Meta data for Facebook Open Graph
       <meta property="og:title" content="{{ post.title }}" />
       <meta property="og:type" content="website" />
       <meta property="og:url" content="{{ post.url }}" />
       <meta property="og:image" content="{{ page.image }}" />
+      -->
     </head>
 
     <!--<div class="header-brand">
@@ -68,54 +68,27 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Naidheachdan
+          Roinnean-seòrsa
           </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/alba">Alba</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/an-rioghachd-aonaichte">An Rìoghachd Aonaichte</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/an-roinn-eorpa">An Roinn-eòrpa</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/creideamh">Creideamh</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/cultar">Cùltar</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/eirinn">Èirinn</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/feisean-proise">Fèisean-pròise</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/foghlam">Foghlam</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/gaidhlig">Gàidhlig</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/gniomhachas">Gnìomhachas</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/lagh">Lagh</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/poilitigs">Poilitigs</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/slainte">Slàinte</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/teicneolas">Teicneòlas</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/eadar-lion">An t-Eadar-lìon</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/applaidean">Applaidean</a>
+              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/apple">Apple</a>
+              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/blog">Blog</a>
+              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/gaidhlig">Gàidhlig</a>
+              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/google">Google</a>
+              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/lcdtq">LCDTQ</a>
+              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/microsoft">Microsoft</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/briathrachas-lcdt" title="Liosta de bhriathrachas Gàidhlig LCDTQ+ | A list of Gaelic LGBTQ+ vocabulary">Briathrachas LCDTQ+</a>
+            <a class="nav-link" href="{{ site.baseurl }}/tasglann">Tasglann</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/dualchas" title="Geàrr-chunntas ghoirid de dh'eachdraidh LCDT na h-Alba | A short history of LGBT Scotland">Dualchas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/comhairle/" title="">Comhairle</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/tachartasan">Tachartasan</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/ceanglaichean">Ceanglaichean</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://www.facebook.com/groups/Proisinis/?ref=group_header" title="Buidheann LCDTQ+ Facebook | An LGBTQ+ Facebook group">Pròisinis</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://pinksaltire.com/" title="Seirbheis naidheachd is fiosrachaidh LGBT+ na h-Alba | Scotland's LGBT+ news and information sourc">Pink Saltire</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/blog">Blog</a>
+            <a class="nav-link" href="{{ site.baseurl }}/lorg">Lorg</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ site.baseurl }}/mu-dheidhinn">Mu Dheidhinn</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/lorg"><i class="fas fa-search"></i></a>
           </li>
         </ul>
       </div>
