--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
       </title>
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
+
     <!--  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
       <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
       <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -33,7 +34,7 @@
       <meta name="application-name" content="Geidh.uk">
       <meta name="msapplication-TileColor" content="#fb135b">
       <meta name="msapplication-TileImage" content="/mstile-144x144.png">
-      <meta name="theme-color" content="#fb135b">
+      <meta name="theme-color" content="#fb135b">-->
 
 
       <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/naidheachdan-rss.xml" />
@@ -42,12 +43,11 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
       <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      Meta data for Facebook Open Graph
+      <!--Meta data for Facebook Open Graph-->
       <meta property="og:title" content="{{ post.title }}" />
       <meta property="og:type" content="website" />
       <meta property="og:url" content="{{ post.url }}" />
       <meta property="og:image" content="{{ page.image }}" />
-      -->
     </head>
 
     <!--<div class="header-brand">
