--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -87,7 +87,7 @@ layout: default
             */
             (function() { // DON'T EDIT BELOW THIS LINE
             var d = document, s = d.createElement('script');
-            s.src = 'https://geidh-uk.disqus.com/embed.js';
+            s.src = 'https://atug.disqus.com/embed.js';
             s.setAttribute('data-timestamp', +new Date());
             (d.head || d.body).appendChild(s);
             })();
