--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,6 +90,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{{ site.baseurl }}/mu-dheidhinn">Mu Dheidhinn</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ site.baseurl }}/cuir-fios" title="Cuir brath do Chrìstean">Cuir Fios</a>
+          </li>
         </ul>
       </div>
     </nav>
