--- a/style.css
+++ b/style.css
@@ -6,6 +6,40 @@ html {
   font-size: 100%;
 }
 
+/* Set Dark Mode's text, and background colors */
+html[data-theme="dark"] {
+  --dark-mode-text-color: #999999;
+  --dark-mode-background-color: #1a1a1a;
+}
+
+/* Check if user has dark mode enabled */
+@media (prefers-color-scheme: dark) {
+    html {
+      content: "dark";
+    }
+}
+
+/* Set Dark Mode background color */
+body {
+    background-color: var(--dark-mode-background-color);
+}
+
+/* Set Dark Mode text color */
+h1, h2, h3, h4, h5, h6, p, li {
+  color: var(--dark-mode-text-color);
+}
+
+/* Set hyperlink color to the site's featured color */
+a {
+  color: {{ site.featured-color }};
+}
+
+/* Set the color of the divider between articles */
+hr {
+  border-color: #f5f5f5;
+  border-style: solid;
+}
+
 /* Center Post Images */
 .brand-image, .post-image, .timeline-image {
     margin: 0 auto;
