--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,14 +84,18 @@
           <li class="nav-item">
             <a class="nav-link" href="{{ site.baseurl }}/tasglann">Tasglann</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/lorg">Lorg</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Barrachd
+          </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="{{ site.baseurl }}/mu-dheidhinn">Mu Dheidhinn</a>
+            <a class="dropdown-item" href="{{ site.baseurl }}/cuir-fios">Cuir Fios</a>
+            <a class="dropdown-item" id="theme-toggle" onclick="modeSwitcher()" href="#"></a>
+            </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/mu-dheidhinn">Mu Dheidhinn</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/cuir-fios" title="Cuir brath do Chrìstean">Cuir Fios</a>
+            <a class="nav-link" href="{{ site.baseurl }}/lorg"><i class="fas fa-search"></i></a>
           </li>
         </ul>
       </div>
