--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,25 +64,33 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav navbar-center">
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/">Dachaigh</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Roinnean-seòrsa
-          </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/eadar-lion">An t-Eadar-lìon</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/applaidean">Applaidean</a>
-              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/apple">Apple</a>
-              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/blog">Blog</a>
-              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/gaidhlig">Gàidhlig</a>
-              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/google">Google</a>
-              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/lcdtq">LCDTQ</a>
-              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/microsoft">Microsoft</a>
-            </div>
+            <a class="nav-link" href="{{ site.baseurl }}/"><i class="fas fa-home"</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/tasglann">Tasglann</a>
+            <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/eadar-lion">An t-Eadar-lìon</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/applaidean">Applaidean</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/apple">Apple</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/blog">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/gaidhlig">Gàidhlig</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/google">Google</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/lcdtq">LCDTQ</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/microsoft">Microsoft</a>
+          </li>
+            </div>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
