--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav navbar-center">
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/"><i class="fas fa-home"></i></a> &nbsp; <a class="nav-link" href="{{ site.baseurl }}/cuir-fios"><i class="fas fa-envelope"></i></a>
+            <span class="nav-link"><a href="{{ site.baseurl }}/"><i class="fas fa-home"></i></a> &nbsp; <a href="{{ site.baseurl }}/cuir-fios"><i class="fas fa-envelope"></i></a></span>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/eadar-lion">An t-Eadar-lìon</a>
