--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -126,7 +126,7 @@
     <div class="footer">
       <p>
         <a href="{{ site.baseurl }}/naidheachdan-rss.xml"><i class="fas fa-rss"></i> Naidheachdan</a> |
-        <a href="{{ site.baseurl }}/tachartasan-rss.xml"><i class="fas fa-rss"></i> Tachartasan</a>
+        <a href="{{ site.baseurl }}/sitemap.xml"><i class="fas fa-sitemap"></i> Sitemap</a>
       </p>
       <p><i class="fa fa-code"></i> le <i class="fa fa-heart"></i> le <a href="https://github.com/GeidhUK/GeidhUK.github.io/" title="Stòr Github Chrìstein MhicMhìcheil | Chris Mitchell's Github Repository">Crìstean MacMhìcheil</a></p>
     </div>
