--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -153,11 +153,11 @@
         	if (currentMode === "dark") {
         		document.documentElement.setAttribute('data-theme', 'light');
         		window.localStorage.setItem('theme', 'light');
-        		document.getElementById("theme-toggle").innerHTML = "<i class="fas fa-lightbulb"></i>";
+        		document.getElementById("theme-toggle").innerHTML = <i class="fas fa-lightbulb"></i>;
         	} else {
         		document.documentElement.setAttribute('data-theme', 'dark');
         		window.localStorage.setItem('theme', 'dark');
-        		document.getElementById("theme-toggle").innerHTML = "<i class="far fa-lightbulb"></i>";
+        		document.getElementById("theme-toggle").innerHTML = <i class="far fa-lightbulb"></i>;
         	}
         }
     </script>
