--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -132,34 +132,34 @@
     </div>
     <!-- User Theme Preference -->
     <script>
-        const userPrefers = getComputedStyle(document.documentElement).getPropertyValue('content');
+          const userPrefers = getComputedStyle(document.documentElement).getPropertyValue('content');
 
-        if (theme === "dark") {
-        	document.getElementById("theme-toggle").innerHTML = "<i class=\"far fa-lightbulb\"></i>";
-        } else if (theme === "light") {
-        	document.getElementById("theme-toggle").innerHTML = "<i class=\"fas fa-lightbulb\"></i>";
-        } else if  (userPrefers === "dark") {
-        	document.documentElement.setAttribute('data-theme', 'dark');
-        	window.localStorage.setItem('theme', 'dark');
-        	document.getElementById("theme-toggle").innerHTML = "<i class=\"far fa-lightbulb\"></i>";
-        } else {
-        	document.documentElement.setAttribute('data-theme', 'light');
-        	window.localStorage.setItem('theme', 'light');
-        	document.getElementById("theme-toggle").innerHTML = "<i class=\"fas fa-lightbulb\"></i>";
-        }
+          if (theme === "dark") {
+          	document.getElementById("theme-toggle").innerHTML = "Cuir air na solais";
+          } else if (theme === "light") {
+          	document.getElementById("theme-toggle").innerHTML = "Cuir dheth na solais";
+          } else if  (userPrefers === "dark") {
+          	document.documentElement.setAttribute('data-theme', 'dark');
+          	window.localStorage.setItem('theme', 'dark');
+          	document.getElementById("theme-toggle").innerHTML = "Cuir air na solais";
+          } else {
+          	document.documentElement.setAttribute('data-theme', 'light');
+          	window.localStorage.setItem('theme', 'light');
+          	document.getElementById("theme-toggle").innerHTML = "Cuir dheth na solais";
+          }
 
-        function modeSwitcher() {
-        	let currentMode = document.documentElement.getAttribute('data-theme');
-        	if (currentMode === "dark") {
-        		document.documentElement.setAttribute('data-theme', 'light');
-        		window.localStorage.setItem('theme', 'light');
-        		document.getElementById("theme-toggle").innerHTML = "<i class=\"fas fa-lightbulb\"></i>";
-        	} else {
-        		document.documentElement.setAttribute('data-theme', 'dark');
-        		window.localStorage.setItem('theme', 'dark');
-        		document.getElementById("theme-toggle").innerHTML = "<i class=\"far fa-lightbulb\"></i>";
-        	}
-        }
-    </script>
+          function modeSwitcher() {
+          	let currentMode = document.documentElement.getAttribute('data-theme');
+          	if (currentMode === "dark") {
+          		document.documentElement.setAttribute('data-theme', 'light');
+          		window.localStorage.setItem('theme', 'light');
+          		document.getElementById("theme-toggle").innerHTML = "Cuir dheth na solais";
+          	} else {
+          		document.documentElement.setAttribute('data-theme', 'dark');
+          		window.localStorage.setItem('theme', 'dark');
+          		document.getElementById("theme-toggle").innerHTML = "Cuir air na solais";
+          	}
+          }
+      </script>
   </body>
 </html>
