--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,13 +93,17 @@
           <li class="nav-item">
             <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/microsoft">Microsoft</a>
           </li>
+          <li class="nav-item">
+          <a class="nav-link" href="{{ site.baseurl }}/mu-dheidhinn">Mu Dheidhinn</a>
+        </li>
+          <li class="nav-item">
+          <a class="nav-link" href="{{ site.baseurl }}/cuir-fios">Cuir Fios</a>
+        </li>
           <li class="nav-item dropdown">
             <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Barrachd
+          <i class="fas fa-cog"></i>
           </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="{{ site.baseurl }}/mu-dheidhinn">Mu Dheidhinn</a>
-            <a class="dropdown-item" href="{{ site.baseurl }}/cuir-fios">Cuir Fios</a>
             <a class="dropdown-item" id="theme-toggle" onclick="modeSwitcher()" href="#"></a>
             </div>
           </li>
