--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,9 +67,6 @@
             <a class="nav-link" href="{{ site.baseurl }}/"><i class="fas fa-home"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/lorg"><i class="fas fa-search"></i></a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/eadar-lion">An t-Eadar-lìon</a>
           </li>
           <li class="nav-item">
@@ -96,8 +93,11 @@
           <li class="nav-item">
           <a class="nav-link" href="{{ site.baseurl }}/mu-dheidhinn">Mu Dheidhinn</a>
         </li>
-          <li class="nav-item">
-          <a class="nav-link" href="{{ site.baseurl }}/cuir-fios">Cuir Fios</a>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ site.baseurl }}/lorg"><i class="fas fa-search"></i></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ site.baseurl }}/cuir-fios"><i class="fas fa-envelope"></i></a>
         </li>
           <li class="nav-item dropdown">
             <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
