--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,9 +76,6 @@
             <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/apple">Apple</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/blog">Blog</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/gaidhlig">Gàidhlig</a>
           </li>
           <li class="nav-item">
@@ -90,14 +87,18 @@
           <li class="nav-item">
             <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/microsoft">Microsoft</a>
           </li>
-          <li class="nav-item">
-          <a class="nav-link" href="{{ site.baseurl }}/mu-dheidhinn">Mu Dheidhinn</a>
-        </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Fios
+          </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/blog">Blog</a>            
+                  <a class="dropdown-item" href="{{ site.baseurl }}/mu-dheidhinn">Mu Dheidhinn</a>
+                  <a class="dropdown-item" href="{{ site.baseurl }}/cuir-fios" title="">Cuir Fios</a>
+            </div>
+          </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ site.baseurl }}/lorg"><i class="fas fa-search"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ site.baseurl }}/cuir-fios"><i class="fas fa-envelope"></i></a>
         </li>
           <li class="nav-item dropdown">
             <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
