--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,167 +4,26 @@
 <!doctype html>
   <html lang="gd-GB">
     <head>
+      <!-- Inserts Header (_includes/header.html) here -->
+      {% include header.html %}
 
-      <!-- Global site tag (gtag.js) - Google Analytics -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134945777-1"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-134945777-1');
-      </script>
-
-      <title>
-      {% if page.title == "Dachaigh" %}
-      {{ site.title }} - {{ site.description }}
-      {% else %}
-      {{ page.title }} - {{ site.title }}
-      {% endif %}
-      </title>
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-
-
-    <!--  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-      <link rel="manifest" href="/site.webmanifest">
-      <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#fb155b">
-      <meta name="apple-mobile-web-app-title" content="Geidh.uk">
-      <meta name="application-name" content="Geidh.uk">
-      <meta name="msapplication-TileColor" content="#fb135b">
-      <meta name="msapplication-TileImage" content="/mstile-144x144.png">
-      <meta name="theme-color" content="#fb135b">-->
-
-
-      <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/naidheachdan-rss.xml" />
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-      <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <!--Meta data for Facebook Open Graph-->
-      <meta property="og:title" content="{{ post.title }}" />
-      <meta property="og:type" content="website" />
-      <meta property="og:url" content="{{ post.url }}" />
-      <meta property="og:image" content="{{ page.image }}" />
     </head>
 
-    <!--<div class="header-brand">
-      <a href="{{ site.baseurl }}/"><img class="brand-image" src="{{ site.baseurl }}/images/header.png" width="750px"></a>
-  	  <p class="site-description">{{ site.description }}</p>
-    </div>-->
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-light" style="background-color: {{ site.featured-color }}!important">
-      <a href="{{ site.baseurl }}/"><img class="brand-image" src="{{ site.baseurl }}/images/header.png" width="250px"></a>
-      <!--<a class="navbar-brand" href="#">Navbar</a>-->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav navbar-center">
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/"><i class="fas fa-home"></i></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/eadar-lion">An t-Eadar-lìon</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/applaidean">Applaidean</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/apple">Apple</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/gaidhlig">Gàidhlig</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/google">Google</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/lcdtq">LCDTQ</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/microsoft">Microsoft</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Fios
-          </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/blog">Blog</a>            
-                  <a class="dropdown-item" href="{{ site.baseurl }}/mu-dheidhinn">Mu Dheidhinn</a>
-                  <a class="dropdown-item" href="{{ site.baseurl }}/cuir-fios" title="">Cuir Fios</a>
-            </div>
-          </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ site.baseurl }}/lorg"><i class="fas fa-search"></i></a>
-        </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="fas fa-cog"></i>
-          </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" id="theme-toggle" onclick="modeSwitcher()" href="#"></a>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <!-- Inserts Navbar (_includes/navbar.html) here -->
+    {% include navbar.html %}
 
   <body>
-    <!-- Dark Mode JavaScript -->
-    <script>
-      const theme = localStorage.getItem('theme');
-      if (theme === "dark") {
-        document.documentElement.setAttribute('data-theme', 'dark');
-      }
-    </script>
+
+    <!-- Page Content -->
     <div class="page-content">
           {{ content }}
     </div>
-    <!-- Bootstrap JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
-    <div class="footer">
-      <p>
-        <a href="{{ site.baseurl }}/naidheachdan-rss.xml"><i class="fas fa-rss"></i> Naidheachdan</a> |
-        <a href="{{ site.baseurl }}/sitemap.xml"><i class="fas fa-sitemap"></i> Sitemap</a>
-      </p>
-      <p><i class="fa fa-code"></i> le <i class="fa fa-heart"></i> le <a href="https://github.com/GeidhUK/GeidhUK.github.io/" title="Stòr Github Chrìstein MhicMhìcheil | Chris Mitchell's Github Repository">Crìstean MacMhìcheil</a></p>
-    </div>
-    <!-- User Theme Preference -->
-    <script>
-          const userPrefers = getComputedStyle(document.documentElement).getPropertyValue('content');
+    <!-- Insert Footer (_includes/footer.html) here -->
+    {% include footer.html %}
 
-          if (theme === "dark") {
-          	document.getElementById("theme-toggle").innerHTML = "Cuir air na solais";
-          } else if (theme === "light") {
-          	document.getElementById("theme-toggle").innerHTML = "Cuir dheth na solais";
-          } else if  (userPrefers === "dark") {
-          	document.documentElement.setAttribute('data-theme', 'dark');
-          	window.localStorage.setItem('theme', 'dark');
-          	document.getElementById("theme-toggle").innerHTML = "Cuir air na solais";
-          } else {
-          	document.documentElement.setAttribute('data-theme', 'light');
-          	window.localStorage.setItem('theme', 'light');
-          	document.getElementById("theme-toggle").innerHTML = "Cuir dheth na solais";
-          }
+    <!-- Insert Dark Mode, Theme Preference & Bootstrap javascript (_includes/javascript.html) here -->
+    {% include javascript.html %}
 
-          function modeSwitcher() {
-          	let currentMode = document.documentElement.getAttribute('data-theme');
-          	if (currentMode === "dark") {
-          		document.documentElement.setAttribute('data-theme', 'light');
-          		window.localStorage.setItem('theme', 'light');
-          		document.getElementById("theme-toggle").innerHTML = "Cuir dheth na solais";
-          	} else {
-          		document.documentElement.setAttribute('data-theme', 'dark');
-          		window.localStorage.setItem('theme', 'dark');
-          		document.getElementById("theme-toggle").innerHTML = "Cuir air na solais";
-          	}
-          }
-      </script>
   </body>
 </html>
