--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,7 +1,6 @@
 ---
 layout: page
 ---
-
 {% unless page.content == '' %}
   <p>{{ page.content }}</p>
 {% endunless %}
@@ -11,24 +10,20 @@ layout: page
 {% endunless %}
 
 {% for post in site.categories[page.category] %}
-  <div class="container">
-    <div class="row">
-      <div class="col-md-3">
-        <a href="{{ post.url | prepend: site.baseurl }}"><img src="{{ post.image}}" class="index-image" /></a>
-      </div>
-      <div class="col-md-9">
-        <h4><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h4>
-        {% if post.author %}
+
+  <div class="row">
+    <div class="col-md-3">
+      <a href="{{ post.url | prepend: site.baseurl }}"><img src="{{ post.image}}" class="index-image" /></a>
+    </div>
+    <div class="col-md-9">
+      <h5 class="post-title"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h5>
+      {% if post.author %}
         <p class="text-muted">{{ post.date | date: "%Y-%m-%d" }} le <a href="{{ post.author_url }}">{{ post.author }}</a></p>
-
-        {% else %}
-
+      {% else %}
         <p class="text-muted">{{ post.date | date: "%Y-%m-%d" }} le <a href="#">Crìstean MacMhìcheil</a></p>
-
-        {% endif %}
-        <p>{{ post.excerpt }}</p>
-      </div>
+      {% endif %}
+      <p>{{ post.excerpt }}</p>
     </div>
   </div>
-  <hr>
+  <div class="section-divider"></div>
 {% endfor %}
