--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav navbar-center">
       <li class="nav-item">
-        <a class="nav-link" href="{{ site.baseurl }}/"><i class="fas fa-home"></i></a>
+        <a class="nav-link" href="{{ site.baseurl }}/">Dachaigh</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/eadar-lion">An t-Eadar-lìon</a>
@@ -30,19 +30,18 @@
       <li class="nav-item">
         <a class="nav-link" href="{{ site.baseurl }}/roinn-seorsa/microsoft">Microsoft</a>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Fios
-      </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/blog">Blog</a>
-              <a class="dropdown-item" href="{{ site.baseurl }}/mu-dheidhinn">Mu Dheidhinn</a>
-              <a class="dropdown-item" href="{{ site.baseurl }}/cuir-fios" title="">Cuir Fios</a>
-        </div>
+      <li class="nav-item">
+        <a class="dropdown-item" href="{{ site.baseurl }}/roinn-seorsa/blog">Blog</a>
       </li>
-    <li class="nav-item">
-      <a class="nav-link" href="{{ site.baseurl }}/lorg"><i class="fas fa-search"></i></a>
-    </li>
+      <li class="nav-item">
+        <a class="dropdown-item" href="{{ site.baseurl }}/mar-deidhinn">Mar Deidhinn</a>
+      </li>
+      <li class="nav-item">
+        <a class="dropdown-item" href="{{ site.baseurl }}/cuir-fios" title="">Cuir Fios</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ site.baseurl }}/lorg">Lorg</a>
+      </li>
       <li class="nav-item dropdown">
         <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <i class="fas fa-cog"></i>
