--- a/style.css
+++ b/style.css
@@ -34,33 +34,7 @@ a {
   color: {{ site.featured-color }};
 }
 
-/* Set the color of the divider between articles */
-hr {
-  border-color: #f5f5f5;
-  border-style: solid;
-}
-
-/* Center Post Images */
-.brand-image, .post-image, .timeline-image {
-    margin: 0 auto;
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
-
-.post-image{
-  padding-top: 25px;
-  padding-bottom: 25px;
-}
-
-.index-image{
-  margin: 0 auto;
-  display: block;
-  max-width: 100%;
-  height: auto;
-  border: 1px whitesmoke solid;
-}
-
+/* Header Section */
 .header-brand {
   margin-bottom: 0px;
   padding-bottom: 15px;
@@ -90,6 +64,12 @@ hr {
 	background-color: {{ site.featured-color }};
 }
 
+/* Content Section */
+
+.post-title{
+  margin: 10px 0px;
+}
+
 .page-content{
   margin-top: 25px;
 }
@@ -98,23 +78,41 @@ hr {
   margin-right: 8px;
 }
 
-.footer{
-    background-color:  {{ site.featured-color }};
-    color: #fff;
-    text-align: center;
-    width: 100%;
-    margin-top: 100px;
-    padding: 5px 0px;
+/* Section divider allowing for more flexible styling compared to an hr line */
+.section-divider {
+  /*background: {{ site.featured-color }}; */
+  margin: 30px 0px;
+  width: 100%;
 }
 
-.footer a {
-    color: #fff;
+/* Images */
+.brand-image, .index-image, .post-image {
+  margin: 0 auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
-.footer a:hover {
-    color: #f3f3f3;
+.index-image{
+  border: 1px whitesmoke solid;
 }
 
+.post-image{
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+/* Events Category */
+.event-list-month{
+  margin: 25px 0px;
+}
+
+/* Related Posts */
+.related{
+  margin-top: 25px;
+}
+
+/* Jump to Top Button */
 #myBtn {
   display: none;
   position: fixed;
@@ -135,6 +133,7 @@ hr {
   background-color: #555;
 }
 
+/* Index Pagination */
 .pagination a, .pagination span {
     padding: 7px 18px;
     border: 1px solid #eee;
@@ -155,18 +154,6 @@ hr {
     text-align: center;
  }
 
-.related{
-  margin-top: 25px;
-}
-
-.post-title{
-  margin: 10px 0px;
-}
-
-.event-list-month{
-  margin: 25px 0px;
-}
-
 .PageNavigation {
   font-size: 14px;
   display: block;
@@ -183,4 +170,22 @@ hr {
 
 .PageNavigation .next {
   text-align: right;
+}
+
+/* Footer Section */
+.footer{
+    background-color:  {{ site.featured-color }};
+    color: #fff;
+    text-align: center;
+    width: 100%;
+    margin-top: 100px;
+    padding: 5px 0px;
+}
+
+.footer a {
+    color: #fff;
+}
+
+.footer a:hover {
+    color: #f3f3f3;
 }
