--- a/style.css
+++ b/style.css
@@ -80,9 +80,10 @@ a {
 
 /* Section divider allowing for more flexible styling compared to an hr line */
 .section-divider {
-  /*background: {{ site.featured-color }}; */
+  background: #e0e0e0;
   margin: 30px 0px;
   width: 100%;
+  height: 1px;
 }
 
 /* Images */
